unpackaged/main/default/objects/VAT_Rate__c/VAT_Rate__c.object-meta.xml
<CustomObject>
    <description>Stores the vat codes and rates to be used in the system</description>
    <label>VAT Rate</label>
    <nameField>
        <label>VAT Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>