unpackaged/main/default/objects/VAT_Rate__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the default rate applicable</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>