unpackaged/main/default/objects/VAT_Rate__c/fields/VAT_Code__c.field-meta.xml
<CustomField>
    <fullName>VAT_Code__c</fullName>
    <description>Vat Code e.g 2, Z</description>
    <label>VAT Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>