unpackaged/main/default/objects/VAT_Rate__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <description>Vat Rate Applicable e.g 2 for 20% and Z for 0%</description>
    <label>VAT Rate</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>