unpackaged/main/default/objects/VAT_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VAT_Code__c</columns>
    <columns>VAT_Rate__c</columns>
    <columns>Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>